--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       - run:
           name: build
           command: cargo build --verbose -p nalgebra;
-      - run: ls target
+      - run: ls -Ra target
       - run: mv $CARGO_HOME target/.
       - persist_to_workspace:
           root: .
@@ -49,7 +49,7 @@ jobs:
       - checkout
       - attach_workspace:
           at: target
-      - run: ls target
+      - run: ls -Ra target
       - run: mv target/.cargo $CARGO_HOME
       - run:
           name: test
