ls target and cargo home

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,8 +50,9 @@ jobs:
       - checkout
       - attach_workspace:
           at: .
-      - run: ls -Ra target
       - run: mv target/.cargo $CARGO_HOME
+      - run: ls -Ra target
+      - run: ls -Ra $CARGO_HOME
       - run:
           name: test
           command: cargo test --verbose;
